<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:id="@+id/editTextPreferenceUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:key="username"
        android:summary="@string/usernameSummary"
        android:title="@string/StringUsername" />
    <EditTextPreference
        android:id="@+id/editTextPreferencePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:key="password"
        android:password="true"
        android:summary="@string/passwordSummary"
        android:title="@string/StringPassword" />
    <EditTextPreference
        android:id="@+id/editTextPreferencePairedDev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:key="pairedDev"
        android:summary="the device you will be sharing with"
        android:title="Better part" />
</PreferenceScreen>